service EventResultService {
  rpc EventResultChange (EventResultRequest) returns (EventResultResponse);
}

message EventResultRequest {
  string eventId = 1;
  int32 localTeamResult = 2;
  int32 visitorTeamResult = 3;
}

message EventResultResponse {
  bool OK = 1;
}